@@ -927,6 +927,12 @@ gwindow = function(title="Window" ,visible=TRUE, name=title,
     parent <- theArgs$location
     cat(gettext("location argument is renamed to 'parent'\n"))
   }
+
+  ## THe visible=TRUE default is not the best. I'd change it if I could go back in time, but
+  ## c'est la vie. Anyways, for those that it really bugs there is this check
+  if(!is.null(getOption("gWidgets:gwindow-default-visible-is-false")))
+    visible <- FALSE
+  
       
   win = .gwindow(toolkit,title, visible,width, height, parent, handler, action, ...)
   obj = new("guiContainer",widget=win,toolkit=toolkit)
